# nix-dev-docs-l10n

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE-BSD  README.ko_KR.md  README.md  README.zh_CN.md  README.zh_TW.md  crowdin.yml  index.html  languages.json  ltd-flyout.js  mutex_queue  versions.json
.github/ISSUE_TEMPLATE/: bug_report.yml  language_request.yml  version_request.yml
.github/workflows/: ci-check-pr-status.yml  ci-crowdin-download-po.yml  ci-crowdin-update-docs.yml  ci-crowdin-upload-pot.yml  ci-deploy-pages.yml  ci-deploy-po-version.yml  ci-gettext-compendium.yml  ci-gettext-statistics.yml  ci-gettext-update-po.yml  ci-offline-upload-po.yml  ci-pr-merged-to-l10n.yml  ci-sphinx-build-docs.yml  ci-sphinx-update-pot.yml  ci-update-contributors.yml  ci-update-license-year.yml  ci-update-submodule.yml
cmake/custom/: crowdin.yml  custom.py  index.html.in  layout.html  ltd-config.js  requirements.txt  requirements.txt.in
cmake/targets/: create_rtd_symlinks.cmake  crowdin_download_po.cmake  crowdin_upload_po.cmake  crowdin_upload_pot.cmake  gettext_compendium.cmake  gettext_statistics.cmake  gettext_update_po.cmake  install_requirements.cmake  prepare_repositories.cmake  sphinx_build_docs.cmake  sphinx_update_pot.cmake
en-us/master/: 404.html  genindex.html  index.html  install-nix.html  ltd-current.js  recommended-reading.html  search.html  searchindex.js  sitemap.xml
en-us/master/acknowledgements/: index.html
en-us/master/concepts/: faq.html  flakes.html  index.html
en-us/master/contributing/: how-to-contribute.html  how-to-get-help.html  index.html
en-us/master/contributing/documentation/: diataxis.html  index.html  resources.html  style-guide.html  writing-a-tutorial.html
en-us/master/guides/: best-practices.html  faq.html  index.html  troubleshooting.html
en-us/master/guides/recipes/: add-binary-cache.html  continuous-integration-github-actions.html  dependency-management.html  direnv.html  index.html  post-build-hook.html  python-environment.html  sharing-dependencies.html
en-us/master/reference/: glossary.html  index.html  nix-manual.html  pinning-nixpkgs.html
en-us/master/tutorials/: callpackage.html  cross-compilation.html  index.html  nix-language.html  packaging-existing-software.html  working-with-local-files.html
en-us/master/tutorials/first-steps/: ad-hoc-shell-environments.html  declarative-shell.html  index.html  reproducible-scripts.html  towards-reproducibility-pinning-nixpkgs.html
en-us/master/tutorials/module-system/: deep-dive.html  index.html
en-us/master/tutorials/nixos/: binary-cache-setup.html  building-and-running-docker-images.html  building-bootable-iso-image.html  deploying-nixos-using-terraform.html  distributed-builds-setup.html  index.html  installing-nixos-on-a-raspberry-pi.html  integration-testing-using-virtual-machines.html  (+2 more)
ko-kr/master/: 404.html  genindex.html  index.html  install-nix.html  ltd-current.js  recommended-reading.html  search.html  searchindex.js  sitemap.xml
ko-kr/master/_static/: documentation_options.js
ko-kr/master/acknowledgements/: index.html
ko-kr/master/concepts/: faq.html  flakes.html  index.html
ko-kr/master/contributing/: how-to-contribute.html  how-to-get-help.html  index.html
ko-kr/master/guides/: best-practices.html  faq.html  index.html  troubleshooting.html
ko-kr/master/reference/: glossary.html  index.html  nix-manual.html  pinning-nixpkgs.html
ko-kr/master/tutorials/: callpackage.html  cross-compilation.html  index.html  nix-language.html  packaging-existing-software.html  working-with-local-files.html
ko_KR/LC_MESSAGES/: index.po
ko_KR/LC_MESSAGES/concepts/: faq.po  index.po
ko_KR/LC_MESSAGES/contributing/: how-to-contribute.po  index.po
ko_KR/LC_MESSAGES/guides/: faq.po  troubleshooting.po
ko_KR/LC_MESSAGES/reference/: glossary.po  pinning-nixpkgs.po
ko_KR/LC_MESSAGES/tutorials/: callpackage.po  index.po  working-with-local-files.po
master/: crowdin.yml  references.json  statistics.txt
scripts/: prepare_pot.sh  validate_po.sh
zh-cn/master/: 404.html  genindex.html  index.html  install-nix.html  ltd-current.js  ltd-provenance.js  recommended-reading.html  search.html  searchindex.js  sitemap.xml
zh-cn/master/acknowledgements/: index.html
zh-cn/master/concepts/: faq.html  flakes.html  index.html
zh-cn/master/contributing/: how-to-contribute.html  how-to-get-help.html  index.html
zh-cn/master/guides/: best-practices.html  faq.html  index.html  troubleshooting.html
zh-cn/master/reference/: glossary.html  index.html  nix-manual.html  pinning-nixpkgs.html
zh-cn/master/tutorials/: callpackage.html  cross-compilation.html  index.html  nix-language.html  packaging-existing-software.html  working-with-local-files.html
zh-tw/: index.html
zh-tw/master/: 404.html  genindex.html  index.html  install-nix.html  ltd-current.js  recommended-reading.html  search.html  searchindex.js  sitemap.xml
zh-tw/master/_static/: documentation_options.js
zh-tw/master/acknowledgements/: index.html
zh-tw/master/concepts/: faq.html  flakes.html  index.html
zh-tw/master/contributing/: how-to-contribute.html  how-to-get-help.html  index.html
zh-tw/master/guides/: best-practices.html  faq.html  index.html  troubleshooting.html
zh-tw/master/reference/: glossary.html  index.html  nix-manual.html  pinning-nixpkgs.html
zh-tw/master/tutorials/: callpackage.html  cross-compilation.html  index.html  nix-language.html  packaging-existing-software.html  working-with-local-files.html
zh_CN/LC_MESSAGES/acknowledgements/: index.po
zh_CN/LC_MESSAGES/concepts/: faq.po  flakes.po
zh_CN/LC_MESSAGES/contributing/: how-to-get-help.po
zh_CN/LC_MESSAGES/guides/: troubleshooting.po
zh_CN/LC_MESSAGES/reference/: nix-manual.po
zh_TW/LC_MESSAGES/: sphinx.po
zh_TW/LC_MESSAGES/concepts/: flakes.po
zh_TW/LC_MESSAGES/contributing/: how-to-get-help.po  index.po
zh_TW/LC_MESSAGES/reference/: glossary.po  pinning-nixpkgs.po
zh_TW/LC_MESSAGES/tutorials/: callpackage.po  nix-language.po  packaging-existing-software.po
(+328 files in other folders)
